[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pod-tenuki"
version = "0.1.0"
description = "A tool for processing podcast audio files"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "requests>=2.32.5",
    "google-cloud-speech>=2.34.0",
    "google-cloud-storage>=3.6.0",
    "google-generativeai>=0.8.3",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "simpleaudio>=1.0.4",
    "pyaudio>=0.2.14",
    "tqdm>=4.67.1",
]
authors = [
    {name = "Devin AI", email = "devin-ai-integration@users.noreply.github.com"}
]

[project.scripts]
pod-tenuki = "pod_tenuki.main:main"
pod-tenuki-convert = "pod_tenuki.cli.convert:main"
pod-tenuki-transcribe = "pod_tenuki.cli.transcribe:main"
pod-tenuki-summarize = "pod_tenuki.cli.summarize:main"
